# vcmp-anticheat

./: .gitignore  CMakeLists.txt  README.md
src/anticheat/: CMakeLists.txt  acsettings.cpp  acsettings.hpp  callbacks.cpp  callbacks.hpp  console.cpp  console.hpp  core.cpp  core.hpp  events.cpp  events.hpp  main.cpp  main.hpp  module.cpp  module.hpp  player.cpp  player.hpp  playermanager.cpp  playermanager.hpp  utils.cpp  utils.hpp
src/include/: vcmp.h
